--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongodb": "^4.8.1",
     "mongoose": "^6.5.0",
     "morgan": "^1.10.0",
     "shortid": "^2.2.16"
